Implement core event platform workflows
Adds event discovery, search and detail screens, a calendar view,
attendance and RSVP controls, account form validation, the assistant
conversation surface, organizer drafts and the notification inbox, with
the matching identity-scoped API endpoints behind a verification filter.